# CARLA-ICTS2-and-Methods

./: Makefile  config.py  extract_pp_data.py  pyproject.toml  requirements.txt  setup_envars.sh
P3VI/: train.py  utils.py
SAC/: sac_controller.py
SAC/sac_discrete/: __init__.py  base.py  eval_sacd.py  sacd_agent.py  shared_sacd.py
SAC/sac_discrete/sacd/: __init__.py  model.py  utils.py
assets/: converter.py  graph.py  grid.py  map.py  occupancy_grid.py
benchmark/: agent.py  misc.py  rlagent.py
benchmark/environment/: __init__.py  car_controller.py  environment.py  hud.py  ped_controller.py  sensors.py  world.py
benchmark/path_planner/: __init__.py  anytimeastar.py  hybridastar.py
benchmark/risk/: __init__.py  risk_assesment.py  risk_aware_path.py
benchmark/scenarios/: scenario.py
ped_path_predictor/: __init__.py  m2p3.py  new_util.py  utils.py
ped_path_predictor/BiTrap/: trainBitrapNew.py
ped_path_predictor/BiTrap/configs/: defaults.py
ped_path_predictor/BiTrap/datasets/: ETH_UCY.py  JAAD.py  JAAD_origin.py  PIE.py  PIE_origin.py  __init__.py  preprocessing.py  transforms.py
ped_path_predictor/BiTrap/tools/: train.py
ped_path_predictor/CI3PP/CI3PP_Both/: model.py  train.py
ped_path_predictor/GroupNet/: test_nba.py  train_group_net.py  train_hyper_nba.py
ped_path_predictor/GroupNet/model/: utils.py  (+2 more)
ped_path_predictor/M3P/: model.py  train.py
ped_path_predictor/P3VI/: model.py  train.py
ped_path_predictor/autobots/: autobot_wrapper.py  autobot_wrapper_cognitive.py  autobot_wrapper_custom_cognitiveV2.py
utils/: connector.py  utils.py
(+73 files in other folders)
