[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "carla-ci3p-pgmpy"
version = "0.0.1"
description = "CI3P+ trained on pgmpy with CARLA-ICTS2"
authors = [{ name = "Camilo Martínez M.", email = "cama02@dfki.de" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10,<3.11"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = []

[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
